@@ -1,4 +1,4 @@
 DIST subsonic-4.4-src.zip 8214761 RMD160 fbadab0031221c7a20ff56b526ce6f63a9d79c7b SHA1 f27c30bfa6934c086f1ecce7cef2620564f26598 SHA256 365976466bef3cfa990d779c5ff757f31c9de26990bc2e5e4a7151885efbe229
-EBUILD subsonic-4.4.ebuild 1784 RMD160 1bd8d9b861fb5f908745afc24b6abb986b32f997 SHA1 4dfaa3316abc62bad2e1c57659822048afb3376d SHA256 62adda402efc92145e8ff59750d9450ef328358cebcebe338c2c39a1d9cac852
-MISC ChangeLog 932 RMD160 fec1e2a674e582d4751f196fa8d85e8515e89d53 SHA1 300d49715f07adcebf051e4237ee72f27160db96 SHA256 05de85de4c785104000e601259e4bfd639b173cf6116ff571d3accf5f5581a7f
+EBUILD subsonic-4.4.ebuild 1958 RMD160 30a9bdaa6f037724be774db073e7454e9576168a SHA1 54cf19c578d287264b92c54660259f2afff4e49d SHA256 d6403e4fffecaba62c51ca1e0d9dd14f693a89b5c8a1b4c24930777607ea6bd3
+MISC ChangeLog 1069 RMD160 c7d379502e0821875248839eedfe64204951bab3 SHA1 3be665806718a55ab034ff834ade45e267375654 SHA256 1ea300b22b9a3fa90714e7dd3af4232defd9707a7da74629dce4cb3d5fe32f4a
 MISC metadata.xml 221 RMD160 52dde43b09fd52c7fca2d101da4536746167b29f SHA1 ce96a105913fc721fb928a0d8216b11fa387b869 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616
