@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Apr 2011; Dean Matzkov <bapabooiee@gmail.com> subsonic-4.4.ebuild:
+  userpriv and usersandbox in FEATURES is now properly checked.
+
   14 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> subsonic-4.4.ebuild:
   Due to the hackiness of Maven in Portage, added a warning to let the user
   know "userpriv usersandbox" must be in FEATURES. Also hard-coded to use mvn-2.2.
